--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,8 @@ jobs:
       - name: Build VuePress site
         run: pnpm run docs:build
 
+      - name: Create CNAME file
+        run: echo "qihuang02.cn" > docs/.vuepress/dist/CNAME
 
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
