--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "vp-update": "vp-update"
   },
   "devDependencies": {
-    "vuepress": "2.0.0-rc.15",
-    "vuepress-theme-plume": "1.0.0-rc.104",
     "@vuepress/bundler-vite": "2.0.0-rc.15",
     "http-server": "^14.1.1",
-    "vue": "^3.5.9"
+    "vue": "^3.5.9",
+    "vuepress": "2.0.0-rc.15",
+    "vuepress-theme-plume": "1.0.0-rc.104"
+  },
+  "dependencies": {
+    "@iconify/json": "^2.2.254"
   }
 }
