--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.18",
     "http-server": "^14.1.1",
+    "sass-embedded": "^1.80.4",
     "vue": "^3.5.12",
     "vuepress": "2.0.0-rc.18",
     "vuepress-theme-plume": "1.0.0-rc.113"
