--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.19",
     "vuepress-theme-plume": "1.0.0-rc.131"
+  },
+  "resolutions": {
+    "@vuepress/plugin-docsearch": "2.0.0-rc.78"
   }
 }
